<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Study or Die</string>
    <string name="title_activity_combat">CombatActivity</string>
    <string name="standardstring">No value input</string>
    <string name="fight">Fight!</string>
    <string name="beatme">Beat me</string>
    <string name="menu">Menu</string>
    <string name="attack">Attack</string>
    <string name="inventory">Inventory</string>
    <string name="character">Character</string>
    <string name="forfeit">Forfeit</string>
    <string name="hp">HP</string>
    <string name="energy">Energy</string>
    <string name="additional_stat">Stat?</string>
    <string name="motivation">Motivation</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New game</string>
    <string name="load_game">Load game</string>
    <string name="avatar_name">Name:</string>
    <string name="title_activity_pick_avatar">PickAvatarActivity</string>
    <string name="pick_your_hero">Pick your hero</string>
    <string name="pick_your_avatar">Pick your avatar:</string>
    <string name="itemname">item name</string>
    <string name="item_description">description</string>
    <string name="input_stats">Stats</string>
    <string name="equip_button">Equip</string>
    <string name="inventory_string">inventory</string>
    <string name="pick_avatar">"        Pick your avatar:"</string>
    <string name="title_activity_game_over">GameOverActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="game_over">Get rekt</string>
    <string name="restart">Restart game</string>
    <string name="get_rekt">Game over</string>
    <string name="respawn">Spawn at start</string>
    <string name="score">"Score: "</string>
    <string name="mute">Mute sound</string>
    <string name="resume_game">Resume last game</string>
    <string name="failed">You have failed!</string>
    <string name="start_over">New game</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="Hard">Hard</string>

</resources>