<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/ivItemPicture"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:src="@drawable/prop_imac" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="345dp"
        android:layout_height="74dp"
        android:layout_x="152dp"
        android:layout_y="40dp"
        android:text="@string/item_description"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvItemName"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_x="225dp"
        android:layout_y="2dp"
        android:text="@string/itemname"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnEquipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="438dp"
        android:layout_y="195dp"
        android:text="@string/equip_button" />

    <TextView
        android:id="@+id/tvAddStat"
        android:layout_width="156dp"
        android:layout_height="75dp"
        android:layout_x="44dp"
        android:layout_y="135dp"
        android:text="@string/input_stats"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</AbsoluteLayout>