<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/button_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3" >

        <TextView
            android:id="@+id/tvOverworldvatarName"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="3"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#111111"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tvAmountOfSteps"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="3"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#111111"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tvTimePassed"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="3"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#111111"
            android:textSize="11sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/ivOverWorldAvatar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:src="@drawable/char_player_front" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tvOverWorldHP"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:text="@string/hp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#111111"
                    android:textSize="11sp" />

                <ProgressBar
                    android:id="@+id/barOverWorldHP"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tvOverWorldEnergy"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:text="@string/energy"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#111111"
                    android:textSize="11sp" />

                <ProgressBar
                    android:id="@+id/barOverWorldEnergy"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tvOverWorldMotivation"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:text="@string/motivation"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#111111"
                    android:textSize="11sp" />

                <ProgressBar
                    android:id="@+id/barOverWorldMotivation"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
